--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0, user-scalable=no" />
     <link rel="shortcut icon" href="../images/common/favicon.png" type="image/x-icon" />
     <title>연세대학교 이과대학</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -740,7 +740,17 @@
       });
 
       const header = $("#header");
+      const gnb = $("#gnb");
       const depth01 = $("#gnb .depth01");
+      const btnAll = $("#header .btn-all");
+      const depth02 = $("#gnb .depth02");
+
+      btnAll.on("click", function () {
+        gnb.toggleClass("on");
+        $(this).toggleClass("on");
+        depth02.stop().delay(250).slideUp();
+      });
+
       depth01.on("click", function (e) {
         e.preventDefault();
         const depth02 = $(this).next();
